# planner-rs

./: .gitignore  Cargo.toml
resources/: model.json  model2.json  options.json  schema.xml  watson60.xml
src/: lib.rs
src/workcontent/: mod.rs
src/workcontent/common/: id_type.rs  mod.rs  numbers.rs
src/workcontent/domain/: business_driver.rs  business_driver_values.rs  environment.rs  job.rs  job_shift.rs  labor_data.rs  location.rs  meal_break.rs  mod.rs  non_flowed_distribution_method.rs  non_meal_break.rs  plan_type.rs  planned_shift.rs  planned_shift_source.rs  planned_shift_type.rs  planner_model.rs  planner_settings.rs  salaried_standard.rs  salary_mode.rs  shift_category.rs  shift_source.rs  standard_set.rs  standard_type.rs  task_standards.rs  units.rs  work_content.rs
src/workcontent/generators/: mod.rs  work_generators.rs
src/workcontent/generators/advanced/: advanced.rs  advanced_work_generator.rs  mod.rs
src/workcontent/generators/basic/: README.md  basic.rs  basic_calculator.rs  basic_planned_shift_creator.rs  basic_standards_processor.rs  basic_work_generator.rs  mod.rs
src/workcontent/generators/calculator/: frequency_calculator.rs  mod.rs  work_content_log.rs  work_per_unit_calculator.rs
src/workcontent/generators/none/: mod.rs  none.rs  none_work_generator.rs
src/workcontent/generators/salaried/: mod.rs  salaried_calculator.rs  salaried_standards_processor.rs  salaried_work_generator.rs
src/workcontent/main/: main.rs
tests/: main_integration.rs
