[package]
name = "planner"
version = "0.1.0"
edition = "2024"

[dependencies]
#joda_rs = { path = "../../joda-rs" }
#date_range_rs = { path = "../../date-range-rs" }
joda_rs = "0.1.0"
date_range_rs = "0.1.0"
rstest = "0.26.1"
uuid = { version = "1.18.0", features = ["v4", "v7"] }
derive_builder = "0.20.2"
